# dram

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README  bootstrap  configure.ac  runtests
source/: .dir-locals.el  README.org  dram
tests/: 01-block_order.test  02-word_match.test  03-pattern_match.test  04-word_and_block_order.test  05-word_and_pattern.test  06-word_and_pattern_and_block_order.test  07-word_case.test  08-word_separator.test  09-custom_field_separator.test  1.test  10-custom_block_definition.test  10.test  11-custom-block_definition_ignore_length.test  11.test  12-block_order_with_range_expand.test  12.test  13.test  14.test  15.test  16.test  17.test  18.test  19.test  2.test  20.test  3.test  4.test  5.test  6.test  7.test  8.test  9.test  setup
